SET( ArtificialHorizonTest_SRCS testartificialhorizon.cpp  )
ADD_EXECUTABLE( testartificialhorizon testartificialhorizon.cpp )
TARGET_LINK_LIBRARIES( testartificialhorizon ${TEST_LIBRARIES})
ADD_TEST( NAME ArtificialHorizonTest COMMAND testartificialhorizon )
SET_TESTS_PROPERTIES( ArtificialHorizonTest PROPERTIES LABELS "stable" TIMEOUT 600)

SET( GreatCircleTest_SRCS testgreatcircle.cpp  )
ADD_EXECUTABLE( testgreatcircle testgreatcircle.cpp )
TARGET_LINK_LIBRARIES( testgreatcircle ${TEST_LIBRARIES})
ADD_TEST( NAME GreatCircleTest COMMAND testgreatcircle )
SET_TESTS_PROPERTIES( GreatCircleTest PROPERTIES LABELS "stable" TIMEOUT 600)

SET( DeltaRATest_SRCS testdeltara.cpp )
ADD_EXECUTABLE( testdeltara ${DeltaRATest_SRCS} )
target_include_directories(testdeltara PRIVATE ${CMAKE_SOURCE_DIR}/kstars)
TARGET_LINK_LIBRARIES( testdeltara ${TEST_LIBRARIES})
ADD_TEST( NAME DeltaRATest COMMAND testdeltara )
SET_TESTS_PROPERTIES( DeltaRATest PROPERTIES LABELS "stable" TIMEOUT 600)
